--- a/WhereToPlay/app/src/main/res/layout/item_check_comments.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_check_comments.xml
@@ -81,7 +81,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/text_red"
+            android:background="@color/white"
             />
     </android.support.constraint.ConstraintLayout>
 
