--- a/WhereToPlay/app/src/main/res/drawable/shape_btn_black_stoke.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_btn_black_stoke.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#00000000" />
-    <corners android:radius="20dp"/>
-    <stroke android:width="1dp" android:color="#666666"/>
-    <padding android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp" />
+    <corners android:radius="20dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#666666" />
+    <padding
+        android:bottom="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:top="4dp" />
 </shape>
