--- a/WhereToPlay/app/src/main/res/layout/activity_order_pay.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_order_pay.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_pay_bill"
