--- a/WhereToPlay/app/src/main/res/layout/adapter_image.xml
+++ b/WhereToPlay/app/src/main/res/layout/adapter_image.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="#010101"
+        android:background="#FFFFFF"
         android:scaleType="centerCrop" />
 
 </FrameLayout>
