--- a/WhereToPlay/app/src/main/res/values/styles.xml
+++ b/WhereToPlay/app/src/main/res/values/styles.xml
@@ -75,9 +75,9 @@
     </style>
 
     <style name="star2" parent="@android:style/Widget.RatingBar">
-        <item name="android:progressDrawable">@drawable/drawable_star_small</item>
-        <item name="android:maxHeight">54dp</item>
-        <item name="android:minHeight">36dp</item>
+        <item name="android:progressDrawable">@drawable/drawable_star_small2</item>
+        <item name="android:minHeight">22dip</item>
+        <item name="android:maxHeight">22dip</item>
     </style>
 
     <style name="star_large" parent="@android:style/Widget.RatingBar">
