--- a/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
@@ -23,52 +23,68 @@
            android:layout_height="1dp"/>
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_below="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tv_release"
-                android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+android:id="@+id/ll_buttom"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="4dp"
-                android:paddingTop="8dp"
-                android:drawableTop="@drawable/icon_pingjia_bottom"
-                android:gravity="center"
-                android:text="发表评价" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_release"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawablePadding="4dp"
+                    android:paddingTop="8dp"
+                    android:drawableTop="@drawable/icon_pingjia_bottom"
+                    android:gravity="center"
+                    android:text="发表评价" />
 
-            <View
-                android:layout_width="1px"
-                android:layout_gravity="center"
-                android:layout_marginLeft="8dp"
-                android:background="@color/about_us_version"
-                android:layout_marginRight="8dp"
-                android:layout_height="20dp"/>
+                <View
+                    android:layout_width="1px"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:background="@color/about_us_version"
+                    android:layout_marginRight="8dp"
+                    android:layout_height="20dp"/>
+                <TextView
+                    android:id="@+id/tv_cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingTop="8dp"
+                    android:drawablePadding="4dp"
+                    android:gravity="center"
+                    android:drawableTop="@drawable/icon_delete_bottom"
+                    android:text="取消预定" />
+
+
+
+                <TextView
+                    android:id="@+id/tv_pay"
+                    android:layout_width="0dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="#C4483C"
+                    android:gravity="center"
+                    android:text="立即支付" />
+            </LinearLayout>
             <TextView
-                android:id="@+id/tv_cancel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="8dp"
-                android:drawablePadding="4dp"
+                android:visibility="gone"
+                android:id="@+id/tv_back"
+                android:layout_width="match_parent"
+                android:text="返回首页"
+                android:padding="12dp"
                 android:gravity="center"
-                android:drawableTop="@drawable/icon_delete_bottom"
-                android:text="取消预定" />
+                android:textColor="#C4483C"
+                android:layout_height="wrap_content" />
 
+        </RelativeLayout>
 
-
-            <TextView
-                android:id="@+id/tv_pay"
-                android:layout_width="0dp"
-                android:textColor="#FFFFFF"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:background="#C4483C"
-                android:gravity="center"
-                android:text="立即支付" />
-        </LinearLayout>
 
     </RelativeLayout>
 
