支付页面颜色

--- a/WhereToPlay/app/src/main/res/drawable/shape_mine_info_sign.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_mine_info_sign.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="@dimen/line_height"
-        android:color="@color/pay_reserve_list_text"/>
+        android:color="#E5E5E5"/>
     <solid android:color="@color/tran"/>
 </shape>
