--- a/WhereToPlay/app/src/main/res/drawable/shape_btn_999999_stoke.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_btn_999999_stoke.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#00000000" />
 
-    <stroke android:width="1dp" android:color="#999999"/>
+    <stroke android:width="1dp" android:color="#33999999"/>
     <padding android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp" />
 </shape>
