--- a/WhereToPlay/app/src/main/res/layout/activity_pay_bill.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_pay_bill.xml
@@ -118,7 +118,7 @@
                         android:inputType="numberDecimal"
                         android:maxLength="12"
                         android:paddingRight="@dimen/padding_10"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textColorHint="@color/pay_reserve_list_text"
                         android:textSize="@dimen/normal_textsize" />
 
@@ -126,7 +126,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/currency"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textSize="@dimen/normal_textsize" />
 
                 </LinearLayout>
@@ -175,7 +175,7 @@
                         android:inputType="numberDecimal"
                         android:maxLength="12"
                         android:paddingRight="@dimen/padding_10"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textColorHint="@color/pay_reserve_list_text"
                         android:textSize="@dimen/normal_textsize" />
 
@@ -183,7 +183,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/currency"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textSize="@dimen/normal_textsize" />
 
                 </LinearLayout>
@@ -270,14 +270,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{order.prepay}"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#C4483C"
                         android:textSize="@dimen/textsize_level2" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/currency"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textSize="@dimen/normal_textsize" />
 
                 </LinearLayout>
@@ -308,7 +308,7 @@
                         android:id="@+id/tv_pay_bill_discount_coupon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_and_buttor_orange"
+                        android:textColor="#333333"
                         android:textSize="@dimen/textsize_level3" />
 
                     <ImageView
